<resources>
    <string name="app_name">RETELL</string>
    <string name="title_activity_n_a_v_e_g_a_c_i_o_n">NAVEGACION</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">BUSQUEDA</string>
    <string name="menu_gallery">ESCANEAR</string>
    <string name="menu_slideshow">REGISTRAR</string>
    <string name="menu_garantia">GARANTIA</string>
    <string name="r_agregar">RETELL LLANTAS</string>
    <string name="menu_inventario">INVENTARIO</string>
</resources>