<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_busqueda">

    <fragment
        android:id="@+id/nav_busqueda"
        android:name="app.jabrex.retell.ui.busqueda.BusquedaFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_busqueda" />

    <fragment
        android:id="@+id/nav_escanear"
        android:name="app.jabrex.retell.ui.escanear.EscanearFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_escanear" />

    <fragment
        android:id="@+id/nav_registrar"
        android:name="app.jabrex.retell.ui.registrar.RegistrarFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_registrar" />
    <fragment
        android:id="@+id/nav_garantia"
        android:name="app.jabrex.retell.ui.garantia.GarantiaFragment"
        android:label="@string/menu_garantia"
        tools:layout="@layout/fragment_garantia" />
    <fragment
        android:id="@+id/nav_retell_llantas"
        android:name="app.jabrex.retell.ui.retellLlantas.RetellLantasFragment"
        android:label="@string/r_agregar"
        tools:layout="@layout/fragment_retell_llantas" />
    <fragment
        android:id="@+id/nav_inventario"
        android:name="app.jabrex.retell.ui.inventario.InterventarioFragment"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventario" />
</navigation>